# f1-overtake-probability

./: .gitignore  CHANGELOG_PRODUCTION.md  PRODUCTION_GUIDE.md  QUICK_START.md  README.md  pyproject.toml
.github/workflows/: ci.yml
.streamlit/: config.toml
app/: streamlit_app.py
docs/: methodology.md
src/f1overtake/: __init__.py  build_dataset.py  calibrate.py  cli.py  config.py  data_loader.py  evaluate.py  features.py  labels.py  model_report.py  split.py  train.py  tune.py  viz.py  xo_metric.py
tests/: __init__.py  test_features.py  test_labels.py  test_temporal_features.py  test_tune.py  test_xo_metric.py
